--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    align-items: center;
+    text-align: center;
 }
 .heading-primary {
     color: #fff;
