--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,11 +7,8 @@
 @import "base/typography";
 @import "base/utilities";
 @import "components/button";
+@import "components/composition";
 @import "layout/header";
 
 @import "pages/home";
-
-
-
-
-
+@import "layout/grid";
