--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,4 +1,5 @@
-.compositions {
+
+.composition {
     position: relative;
 
     .composition__photo {
@@ -7,25 +8,31 @@
         border-radius: 2px;
         position: absolute;
         z-index: 10;
-        transition: all 0.2s;
+        transition: all .2s;
+        outline-offset: 2rem;
 
-        &p--1 {
+        &.p--1 {
             left: 0;
             top: -2rem;
         }
-        &p--2 {
+        &.p--2 {
             left: 0;
             top: 2rem;
         }
-        &p--3 {
+        &.p--3 {
             left: 20%;
             top: 10rem;
         }
-        $:hover {
-            transform: scale: (1.05);
+        &:hover {
+            outline: 1.5rem solid $color-primary;
+            transform: scale (1.05) translateY(-.5rem);
             box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
             z-index: 20;
         }
+
+    }
+    &:hover &__photo:not(:hover) {
+        transform: scale(.95);
 
     }
 }
