--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,9 @@
 @import "base/typography";
 @import "base/utilities";
 @import "components/button";
-@import "components/composition";
 @import "layout/header";
-
 @import "pages/home";
 @import "layout/grid";
+@import "components/composition";
+@import "components/feature-box";
+@import "components/card";
