added footer and navigation

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,10 @@
 @import "base/utilities";
 @import "components/button";
 @import "layout/header";
+@import "layout/navigation";
 @import "pages/home";
 @import "layout/grid";
+@import "layout/footer";
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
