--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,8 +7,9 @@ $color-primary-dark: #28b485;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
-$color-gey-dark:#777;
-$color-gey-dark-2:#999;
+$color-grey-dark:#777;
+$color-grey-dark-2:#999;
+$color-grey-dark-3:#333;
 
 $color-white: #fff;
 $color-black: #000;
