--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,7 +2,7 @@ body {
     font-family: 'lato', sans-serif;
     font-weight: 400;
     line-height: 1.7;
-    color: $color-gey-dark;
+    color: $color-grey-dark;
     padding: 3rem;
 }
 .heading-primary {
