--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -29,7 +29,7 @@
     }
         &--white {
             background-color: $color-white;
-            color: $color-gey-dark;
+            color: $color-grey-dark;
                 &::after {
                 background-color: $color-white;
                 }
