--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -25,7 +25,7 @@
     }
     
     &::-webkit-input-placeholder {
-        color: $color-gey-dark-2;
+        color: $color-grey-dark-2;
     }
     }
   
