--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -13,3 +13,19 @@
     transform: translate(-50%, -50%);
 
 }
+
+
+@mixin respond ($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content };
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) { @content };
+    }
+    @if $breakpoint == phone-land {
+        @media (max-width: 75em) { @content };
+    }
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) { @content };
+    }
+}
