--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,13 +3,15 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
+    
 }
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
+
+    
     &--main {
         display: block;
         font-size: 6rem;
@@ -18,7 +20,11 @@ body {
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
-    }
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
+        }
     &--sub {
         display: block;
         font-size: 2rem;
