--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -13,6 +13,11 @@
         border-bottom: 3px solid transparent;
         width: 45%;
         display: block;
+        transition: all .3s;
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     
     &:focus {
         outline: none;
@@ -44,9 +49,13 @@
         transform: translateY(-4rem);
     }
     &__radio-group {
-        width: 20%;
+        width: 49%;
         display: inline-block;
-        margin-left: 3rem;
+        
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
     &__radio-input {
         display: none;
