--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,6 +9,17 @@
     font-size: $default-font-size;
     transform: skewX(-12deg);
 
+    @media respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+    @include respond(phone) {
+        transform: skewX(0);
+    }
+
+    
+
     & > * {
         transform: skewX(12deg);
     }
@@ -20,6 +31,9 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0);
+        }
     }
     &__img {
         height: 100%;
@@ -28,6 +42,10 @@
     }
     &__text {
         transform: skewX(12deg);
+        @include respond(phone) {
+            transform: skewX(0);
+        }
+
     }
     &__caption {
         position: absolute;
@@ -50,4 +68,5 @@
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%);
     }
+    
 }
