--- a/css/main.css
+++ b/css/main.css
@@ -318,13 +318,19 @@ body {
 
 .header {
   height: 95vh;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(126, 213, 111, 0.8)), to(rgba(40, 180, 133, 0.8))), url(../img/hero.jpg);
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(126, 213, 111, 0.8)), to(rgba(40, 180, 133, 0.8))), url(../img/hero-small.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
           clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+@media (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+  .header {
+    background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(126, 213, 111, 0.8)), to(rgba(40, 180, 133, 0.8))), url(../img/hero.jpg);
+    background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  }
 }
 @media (max-width: 37.5em) {
   .header {
@@ -569,14 +575,23 @@ body {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
   background-size: 100%;
   border-radius: 3px;
-  -webkit-box-shadow: 0 1.5 4rem, rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1.5 4rem, rgba(0, 0, 0, 0.2);
-  height: 50rem;
-  padding-left: 3rem;
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+}
+@media (max-width: 56.25em) {
+  .book {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.9))), url(../img/nat-10.jpg);
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10.jpg);
+  }
 }
 .book__form {
   width: 50%;
   padding: 6rem;
+}
+@media (max-width: 56.25em) {
+  .book__form {
+    width: 100%;
+  }
 }
 
 .row {
@@ -749,35 +764,35 @@ body {
             box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
   }
 }
-.composition .composition__photo.p--1 {
+.composition .composition__photop--1 {
   left: 0;
   top: -2rem;
 }
 @media (max-width: 56.25em) {
-  .composition .composition__photo.p--1 {
+  .composition .composition__photop--1 {
     top: 0;
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
   }
 }
-.composition .composition__photo.p--2 {
-  left: 0;
+.composition .composition__photo--p2 {
+  right: 0;
   top: 2rem;
 }
 @media (max-width: 56.25em) {
-  .composition .composition__photo.p--2 {
+  .composition .composition__photo--p2 {
     top: -1rem;
     -webkit-transform: scale(1.3);
             transform: scale(1.3);
     z-index: 100;
   }
 }
-.composition .composition__photo.p--3 {
+.composition .composition__photo--p3 {
   left: 20%;
   top: 10rem;
 }
 @media (max-width: 56.25em) {
-  .composition .composition__photo.p--3 {
+  .composition .composition__photo--p3 {
     top: 1rem;
     left: 0;
     -webkit-transform: scale(1.1);
@@ -786,8 +801,8 @@ body {
 }
 .composition .composition__photo:hover {
   outline: 1.5rem solid #55c57a;
-  -webkit-transform: scale 1.05 translateY(-0.5rem);
-          transform: scale 1.05 translateY(-0.5rem);
+  -webkit-transform: scale(1.05) translateY(-0.5rem);
+          transform: scale(1.05) translateY(-0.5rem);
   -webkit-box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
           box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
   z-index: 20;
@@ -837,6 +852,7 @@ body {
 .card {
   -webkit-perspective: 150rem;
           perspective: 150rem;
+  -moz-perspective: 150rem;
   position: relative;
   height: 52rem;
 }
@@ -849,8 +865,8 @@ body {
   left: 0;
   width: 100%;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  border-radius: 0.3rem;
+  backface-visibility: hidden;
+  border-radius: 3px;
   overflow: hidden;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
@@ -887,7 +903,7 @@ body {
   height: 23rem;
   background-blend-mode: screen;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
@@ -969,10 +985,10 @@ body {
   font-size: 6rem;
   font-weight: 100;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em), only screen and (hover: none) {
   .card {
     height: auto;
-    border-radius: 0.3rem;
+    border-radius: 3px;
     background-color: #fff;
     -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
             box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
@@ -986,29 +1002,29 @@ body {
   .card__side--back {
     -webkit-transform: rotateY(0);
             transform: rotateY(0);
-    -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-            clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
+            clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
   }
-  .card__side:hover .card__side__side--front {
+  .card:hover .card__side--front {
     -webkit-transform: rotateY(0);
             transform: rotateY(0);
   }
-  .card__side__deatils {
+  .card__details {
     padding: 1rem 3rem;
   }
-  .card__side__cta {
-    position: absolute;
-    top: 0;
+  .card__cta {
+    position: relative;
+    top: 0%;
     left: 0;
     -webkit-transform: translate(0);
             transform: translate(0);
     width: 100%;
     padding: 7rem 4rem 4rem 4rem;
   }
-  .card__side__price-box {
-    margin-bottom: 8rem;
+  .card__price-box {
+    margin-bottom: 3rem;
   }
-  .card__side__price-value {
+  .card__price-value {
     font-size: 4rem;
   }
 }
@@ -1026,6 +1042,19 @@ body {
   -webkit-transform: skewX(-12deg);
           transform: skewX(-12deg);
 }
+@media (max-width: 56.25em) {
+  .story {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+}
+@media (max-width: 37.5em) {
+  .story {
+    -webkit-transform: skewX(0);
+            transform: skewX(0);
+  }
+}
 .story > * {
   -webkit-transform: skewX(12deg);
           transform: skewX(12deg);
@@ -1041,6 +1070,12 @@ body {
           transform: translateX(-3rem) skewX(12deg);
   position: relative;
 }
+@media (max-width: 37.5em) {
+  .story__shape {
+    -webkit-transform: translateX(-3rem) skewX(0);
+            transform: translateX(-3rem) skewX(0);
+  }
+}
 .story__img {
   height: 100%;
   -webkit-transform: translateX(-4rem) scale(1.4);
@@ -1051,6 +1086,12 @@ body {
 .story__text {
   -webkit-transform: skewX(12deg);
           transform: skewX(12deg);
+}
+@media (max-width: 37.5em) {
+  .story__text {
+    -webkit-transform: skewX(0);
+            transform: skewX(0);
+  }
 }
 .story__caption {
   position: absolute;
@@ -1110,6 +1151,14 @@ body {
   border-bottom: 3px solid transparent;
   width: 45%;
   display: block;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+@media (max-width: 56.25em) {
+  .form__input {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 .form__input:focus {
   outline: none;
@@ -1149,9 +1198,14 @@ body {
           transform: translateY(-4rem);
 }
 .form__radio-group {
-  width: 20%;
+  width: 49%;
   display: inline-block;
-  margin-left: 3rem;
+}
+@media (max-width: 56.25em) {
+  .form__radio-group {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 .form__radio-input {
   display: none;
