--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -18,7 +18,7 @@
             box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
         }
 
-        &.p--1 {
+        &p--1 {
             left: 0;
             top: -2rem;
             @include respond(tab-port) {
@@ -26,8 +26,8 @@
                 transform: scale(1.2);
             }
         }
-        &.p--2 {
-            left: 0;
+        &--p2 {
+            right: 0;
             top: 2rem;
             @include respond(tab-port) {
                 top: -1rem;
@@ -35,7 +35,7 @@
                 z-index: 100;
             }
         }
-        &.p--3 {
+        &--p3 {
             left: 20%;
             top: 10rem;
             @include respond(tab-port) {
@@ -46,7 +46,7 @@
         }
         &:hover {
             outline: 1.5rem solid $color-primary;
-            transform: scale (1.05) translateY(-.5rem);
+            transform: scale(1.05) translateY(-.5rem);
             box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
             z-index: 20;
         }
@@ -54,6 +54,5 @@
     }
     &:hover &__photo:not(:hover) {
         transform: scale(.95);
-
     }
 }
