--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,7 +9,7 @@
     font-size: $default-font-size;
     transform: skewX(-12deg);
 
-    @media respond(tab-port) {
+    @include respond(tab-port) {
         width: 100%;
         padding: 4rem;
         padding-left: 7rem;
